<resources>
    <plurals name="backups_number">
        <item quantity="one">копии</item>
        <item quantity="other">копий</item>
    </plurals>
    <string name="app_name">Osteopath</string>
    <string name="header_contacts">Контактные данные</string>
    <string name="header_disfunctions">Дисфункции</string>
    <string name="header_plan">План работ и что было сделано</string>
    <string name="header_body_condition">Состояние тела</string>
    <string name="header_sessions">Сеансы</string>
    <string name="header_customers">Клиенты</string>
    <string name="header_attachments">Файлы</string>
    <string name="header_customer_name">Фамилия, имя</string>
    <string name="header_customer_birth_date">Дата рождения</string>
    <string name="header_customer_phone">Телефон</string>
    <string name="header_customer_instagram">Instagram</string>
    <string name="header_customer_category">Категория</string>
    <string name="header_customer_archive">Архив</string>
    <string name="customer_profile_archive">клиент находится в архиве</string>
    <string name="header_disfunction_description">Описание дисфункции</string>
    <string name="header_session_disfunctions">Дисфункции для отработки на сеансе</string>
    <string name="category_work">В работе</string>
    <string name="category_work_done">Работа завершена</string>
    <string name="category_no_help">Не удалось помочь</string>
    <string name="fragment_title_customers">Клиенты</string>
    <string name="content_description_customers_add">Добавить клиента</string>
    <string name="content_description_disfunctions_add">Добавить дисфункцию</string>
    <string name="content_description_sessions_add">Добавить сеанс</string>
    <string name="empty_screen_hint">Список %1$s пуст.\nДля добавления нажмите эту кнопку</string>
    <string name="customer_menu_item_search">Поиск</string>
    <string name="customer_menu_item_filter">Фильтр</string>
    <string name="header_filter_by_age">По возрасту</string>
    <string name="filter_by_age_children">дети (до 18 лет)</string>
    <string name="filter_by_age_adults">взрослые (от 18 лет)</string>
    <string name="header_filter_by_category">По категории</string>
    <string name="header_filter_is_archived">Клиенты, помещенные в архив</string>
    <string name="filter_show_archived">отображать</string>
    <string name="standard_edit_screen_menu_item_cancel">Отмена</string>
    <string name="standard_edit_screen_menu_item_delete">Удалить</string>
    <string name="customer_filter_menu_item_select_all">Установить все</string>
    <string name="customer_filter_menu_item_deselect_all">Сбросить все</string>
    <string name="hint_customer_filter_or_search_result">По заданным условиям\nни одного клиента не найдено.</string>
    <string name="customer_profile_new_customer">Новый клиент</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disfunction_status_work">В работе</string>
    <string name="disfunction_status_work_done_group">Отработаны</string>
    <string name="disfunction_status_work_done">Отработана</string>
    <string name="disfunction_status_no_help">Не удалось отработать</string>
    <string name="disfunction_status_wrong_diagnosed_group">Неверно диагностированы</string>
    <string name="disfunction_status_wrong_diagnosed">Неверно диагностирована</string>
    <string name="alert_dialog_cancel_changes">Данные были изменены. Сохранить изменения?</string>
    <string name="alert_dialog_button_yes">Да</string>
    <string name="alert_dialog_button_no">Нет</string>
    <string name="snackbar_saving_changes">Сохраняю изменения…</string>
    <string name="session_status_done">Проведен</string>
    <string name="session_status_planned">Запланирован</string>
    <string name="header_date">Дата</string>
    <string name="header_time">Время</string>
    <string name="header_session_start_time">@string/common_time_start</string>
    <string name="header_session_end_time">@string/common_time_end</string>
    <string name="header_session_customer_name">Клиент</string>
    <string name="header_session_done">Сеанс проведен</string>
    <string name="permissions_not_granted">Нельзя использовать эту функцию - не получено разрешений.</string>
    <string name="permissions_explanation_template">Чтобы использовать функцию %1$s, пожалуйста, предоставьте разрешения: %2$s.</string>
    <string name="permissions_function_get_data_from_contact">заполнения имени и телефона из адресной книги</string>
    <string name="permissions_read_contact">чтения адресной книги</string>
    <string name="permissions_denied_template">Функция %1$s недоступна без следующих разрешений: %2$s. Открыть настройки программы, чтобы Вы могли установить эти разрешения?</string>
    <string name="add_attachments_menu_pick_file">выбрать файл</string>
    <string name="add_attachments_menu_take_photo">сделать фото</string>
    <string name="add_attachments_menu_record_audio">записать аудио</string>
    <string name="add_attachments_menu_record_video">записать видео</string>
    <string name="drawer_menu_item_settings">Настройки</string>
    <string name="header_backup_directory">Папка для хранения копий</string>
    <string name="header_backup_file">Файл резервной копии БД</string>
    <string name="backup_create_hint">Выберите папку, в которой будут сохраняться резервные копии базы данных:</string>
    <string name="backup_restore_hint">Выберите файл резервной копии, из которого нужно восстановить базу данных:</string>
    <string name="backup_create_max_copies">Будет храниться не более %1$d %2$s. Программа автоматически удалит самую старую копию.</string>
    <string name="last_backup_status_successful">Последняя копия создана %1$s в %2$s %3$s.</string>
    <string name="last_backup_status_failed">Последняя попытка создать копию БД %1$s %2$s в %3$s завершилась ошибкой: %4$s</string>
    <string name="backup_type_manual">вручную</string>
    <string name="backup_type_auto">автоматически</string>
    <string name="create_backup_manual">Сохранить копию вручную</string>
    <string name="restore_from_backup">Восстановить БД из файла</string>
    <string name="create_backup_auto">Сохранять копии автоматически\nкаждые %1$d ч</string>
    <string name="backup_dir_not_exists">Указанная директория не обнаружена, выберите другую.</string>
    <string name="backup_dir_not_accessible">Нет доступа к указанной директории, перевыберите ее или выберите другую.</string>
    <string name="backup_operation_progress">Пожалуйста, дождитесь завершения операции</string>
    <string name="backup_restore_success_message">Восстановление из резервной копии завершено успешно.</string>
    <string name="backup_restore_fail_message">Восстановление из резервной копии завершено с ошибкой: %1$s</string>
    <string name="empty_screen_hint_part_customers">клиентов</string>
    <string name="empty_screen_hint_part_disfunctions">дисфункций</string>
    <string name="empty_screen_hint_part_sessions">сеансов</string>
    <string name="empty_screen_hint_part_attachments">файловых вложений</string>
    <string name="common_add_to_archive">В архив</string>
    <string name="common_change_status">Изменить статус</string>
    <string name="common_delete">Удалить</string>
    <string name="common_get_from_archive">Извлечь из архива</string>
    <string name="common_mark_as_done">Отметить проведенным</string>
    <string name="common_scheduler_settings_description">Здесь вы можете настроить планировщик сеансов так, чтобы быстро и точно находить свободное время для очередного приема.</string>
    <string name="common_scheduler_parameters">Параметры планировщика сеансов</string>
    <string name="common_time_start">С</string>
    <string name="common_time_end">По</string>
    <string name="common_rest_included">с перерывом</string>
    <string name="common_duration_extended_hour">ч</string>
    <string name="common_duration_extended_minutes">мин</string>
    <string name="customer_context_menu_item_archive">@string/common_add_to_archive</string>
    <string name="customer_context_menu_item_unarchive">@string/common_get_from_archive</string>
    <string name="customer_context_menu_item_delete">@string/common_delete</string>
    <string name="disfunction_context_menu_change_status">@string/common_change_status</string>
    <string name="disfunction_context_menu_delete">@string/common_delete</string>
    <string name="session_context_menu_mark_as_done">@string/common_mark_as_done</string>
    <string name="session_context_menu_delete">@string/common_delete</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="dialog_button_cancel">Отменить</string>
    <string name="dialog_button_archive">В архив</string>
    <string name="customer_delete_dialog_message">Вы действительно хотите удалить профиль клиента %1$s? Будут удалены также все дисфункции, сеансы и ссылки на файлы (сами файлы удалены не будут). Действие нельзя будет отменить. Вы можете поместить в архив профиль клиента вместо удаления или подтвердить удаление.</string>
    <string name="customer_delete_dialog_button_neutral">@string/dialog_button_archive</string>
    <string name="disfunction_delete_dialog_message">Вы действительно хотите удалить эту дисфункцию? Она будет также удалена из сеансов. Удалить?</string>
    <string name="session_delete_dialog_message">Вы действительно хотите удалить этот сеанс?</string>
    <string name="no_sessions_period_delete_dialog_message">Вы действительно хотите удалить этот период?</string>
    <string name="screen_disfunction_title_new">Новая дисфункция</string>
    <string name="screen_disfunction_title">Дисфункция</string>
    <string name="screen_no_sessions_period_title_new">Новый период</string>
    <string name="screen_no_sessions_period_title">Время не для сеансов</string>
    <string name="screen_no_sessions_period_edit_description">Задайте период, который Вы хотите оставить без сеансов (например, это может быть незапланированный выходной или какое-либо важное дело в течение дня, не связанное с сеансами - в обоих случаях, Вам нужно отметить это время как нерабочее, это поможет планировщику сеансов лучше подбирать подходящее время).</string>
    <string name="screen_select_disfunctions_title">Выберите дисфункции</string>
    <string name="screen_session_title_new">Новый сеанс</string>
    <string name="screen_session_title">Сеанс</string>
    <string name="screen_sessions_tab_upcoming_text">Предстоящие</string>
    <string name="screen_sessions_tab_recent_schedule">Расписание</string>
    <string name="screen_sessions_tab_recent_text">Недавние</string>
    <string name="screen_sessions_tab_error_text">Ошибка</string>
    <string name="screen_scheduler_show_free_time_blocks">показать свободное время</string>
    <string name="screen_scheduler_add_button_content_description">Добавить сеанс или время, в которое сеансов быть не должно</string>
    <string name="screen_settings_all_backup_header">Резервное копирование базы данных</string>
    <string name="screen_settings_all_backup_create">Создание резервных копий</string>
    <string name="screen_settings_all_backup_create_description">Вы можете сохранить базу данных в файл. После переустановки программы на другое устройство можно восстановить базу данных из сохраненного файла. Доступно как ручное, так и автоматическое сохранение копий.</string>
    <string name="screen_settings_all_backup_restore">Восстановление базы из резервной копии</string>
    <string name="screen_settings_all_backup_restore_description">Загрузите базу данных из сохраненного ранее файла.</string>
    <string name="screen_settings_all_scheduler_header">Планировщик сеансов</string>
    <string name="screen_settings_all_scheduler">@string/common_scheduler_parameters</string>
    <string name="screen_settings_all_scheduler_description">@string/common_scheduler_settings_description</string>
</resources>